# asf_kai

./: .gitignore  Cargo.toml  clean_copy.sh  diff_output.patch
asf_kai/: Cargo.toml
asf_kai/src/ecs/: camera.rs  input.rs  mod.rs  ui.rs
asf_kai/src/renderer/: core.rs
asf_kai/src/shaders/: shader.wgsl
assets/models/: Ancient_wuxia_town_wi_0707194824_texture.glb
clean_project/: .gitignore  Cargo.toml
clean_project/core/: Cargo.toml
clean_project/core/src/: app.rs  main.rs
clean_project/core/src/ecs/: animation.rs  asset_systems.rs  camera.rs  mod.rs  ui.rs
clean_project/core/src/renderer/: core.rs
clean_project/core/src/renderer/assets/: animated_meshlet.rs  mod.rs  texture.rs
clean_project/core/src/renderer/pipelines/: d3_animated_pipeline.rs  d3_pipeline.rs  triangle.rs
clean_project/core/src/shaders/: d3_animated.wgsl
clean_project/database/database.xcodeproj/: project.pbxproj
clean_project/database/src/: main.rs
clean_project/idk/idk macOS/: GameViewController.swift
clean_project/idk/idk macOS/Base.lproj/: Main.storyboard
clean_project/idk/idk macOS/core.xcodeproj/xcshareddata/xcschemes/: core (standalone executable).xcscheme
clean_project/idk/idk macOS/core.xcodeproj/xcuserdata/mewosmith.xcuserdatad/xcschemes/: xcschememanagement.plist
clean_project/idk/idk.xcodeproj/project.xcworkspace/xcuserdata/mewosmith.xcuserdatad/: UserInterfaceState.xcuserstate
clean_project/idk/idk.xcodeproj/xcshareddata/xcschemes/: idk macOS.xcscheme
core/: Cargo.toml
core/src/: app.rs  config.rs  main.rs
core/src/ecs/: animation.rs  asset_systems.rs  camera.rs  commands.rs  input.rs  instance.rs  mod.rs  model.rs  time.rs  ui.rs
core/src/renderer/: assets.rs  core.rs  d3_pipeline.rs  events.rs  mod.rs  scene.rs  tonemapping_pass.rs
core/src/renderer/assets/: animated_meshlet.rs  mod.rs  static_meshlet.rs  texture.rs
core/src/renderer/pipelines/: d3_animated_pipeline.rs  d3_pipeline.rs  mod.rs  tonemapping.rs  triangle.rs
core/src/shaders/: d3.wgsl  d3_animated.wgsl  tonemapping.wgsl
database/: Cargo.toml  models.redb
database/src/: gltf_loader.rs  main.rs
gpu_picking/: Cargo.toml
gpu_picking/src/: lib.rs  picking.wgsl
idk/idk Shared/: Renderer.swift  ShaderTypes.h  Shaders.metal
idk/idk macOS/: AppDelegate.swift
idk/idk macOS/core.xcodeproj/: project.pbxproj
idk/idk.xcodeproj/: project.pbxproj
idk/idk.xcodeproj/xcuserdata/mewosmith.xcuserdatad/xcschemes/: xcschememanagement.plist
interner/: Cargo.toml
interner/src/: lib.rs
src/: app.rs  config.rs  ecs.rs  main.rs  render.rs  shader.wgsl
src/ecs/: camera.rs  counter.rs  framerate.rs  mod.rs  model.rs  rotation.rs  ui.rs
src/renderer/: d3_pipeline.rs  mod.rs  tonemapping_pass.rs  triangle_pass.rs
src/shaders/: d3.wgsl
tests/: Cargo.toml  asset_management.rs  meshlet_generation.rs  parallel_execution.rs
types/: Cargo.toml
types/src/: lib.rs
