[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
russimp = "3.2.1"
redb = "2.6.0"
types = { path = "../types" }
log = "0.4.27"
walkdir = "2"
glam = { version = "0.29.0", features = ["serde"] } # For converting from russimp vectors
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0.86"
env_logger = "0.11.5"
