[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
russimp = "3.2.1"
redb = "2.6.0"
types = { path = "../types" }
glam = { version = "0.29.0", features = ["serde"] } # For converting from russimp vectors
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
