[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
russimp = "3.2.1"
redb = "2.6.0"
types = { path = "../types" }
glam = { version = "0.29.0", features = ["serde"] } # For converting from russimp vectors
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
meshopt = "0.5.0"
bytemuck = "1.23.1"
gltf = "1.4.1"
image = { version = "0.25.6", features = ["png"] }
log = "0.4"
env_logger = "0.11"
